# financial_sentiment_dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: architecture.md  design.md
src/financial_sentiment_dashboard/: __init__.py  analysis.py  data_loader.py  main.py  sentiment.py  utils.py  visualize.py
web/: index.php
web/assets/css/: style.css
web/assets/js/: script.js
web/templates/: dashboard.html
