[metadata]
name = financial_sentiment_dashboard
version = 0.1.0
description = A tool for financial sentiment analysis and dashboards
author = md.sameer sayed
license = MIT

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    numpy
    matplotlib
    requests
    transformers
    torch

[options.extras_require]
dev =
    pytest
    black
    flake8
